# django-ngrok

./: .gitignore  LICENSE  LICENSE.md  README.md  manage.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
django_ngrok/: apps.py
django_ngrok/management/commands/: runserver_ngrok.py
tests/: conftest.py  settings.py  test_commands.py  test_integration.py  test_unit.py
